// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Table Element Prop - borderless: true 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--borderless">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - caption 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <caption>
    </caption>
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: first 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--fixed-width-columns--first">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: first-two 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--fixed-width-columns--first-two">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: none 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--fixed-width-columns--none">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_columns items: second 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--fixed-width-columns--second">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - fixed_width_table: true 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--fixed-width-table">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - format items: numeric 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--numeric">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Side table header.
        </th>
        <td>
          This is a table footer cell.
        </td>
        <td>
          This is a table footer cell.
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - format items: regular 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Side table header.
        </th>
        <td>
          This is a table footer cell.
        </td>
        <td>
          This is a table footer cell.
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - sticky_headers items: none 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - sticky_headers items: side 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--sticky-side-headers">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element Prop - sticky_headers items: top 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table e-bolt-table--sticky-top-headers">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element default 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element footer table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th>
          Side table header.
        </th>
        <td>
          This is a table footer cell.
        </td>
        <td>
          This is a table footer cell.
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Bolt Table Element side header table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <tbody>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <th>
          This is a side header.
        </th>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bolt Table Element top header table element 1`] = `
<div class="e-bolt-table-wrapper">
  <table class="e-bolt-table">
    <thead>
      <tr>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
        <th>
          This is a header cell in table header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
      <tr>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
        <td>
          This is a regular cell.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
